--- a/src/app/tasks/pages/tasks-list/tasks-list.page.html
+++ b/src/app/tasks/pages/tasks-list/tasks-list.page.html
@@ -5,8 +5,13 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
-    <app-task-item *ngFor="let task of tasks$ | async" [task]="task"></app-task-item>
+  <ion-list *ngIf="tasks$ | async as tasks">
+    <ng-container *ngIf="tasks.length > 0; else noTasks">
+      <app-task-item *ngFor="let task of tasks" [task]="task"></app-task-item>
+    </ng-container>
+    <ng-template #noTasks>
+      <ion-item lines="none">No Taks yet...</ion-item>
+    </ng-template>
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
