--- a/src/app/tasks/pages/tasks-list/tasks-list.page.html
+++ b/src/app/tasks/pages/tasks-list/tasks-list.page.html
@@ -10,7 +10,7 @@
       <app-task-item *ngFor="let task of tasks" [task]="task"></app-task-item>
     </ng-container>
     <ng-template #noTasks>
-      <ion-item lines="none">No Taks yet...</ion-item>
+      <ion-item lines="none">No Task yet...</ion-item>
     </ng-template>
   </ion-list>
 
