--- a/src/app/tasks/pages/task-save/task-save.page.html
+++ b/src/app/tasks/pages/task-save/task-save.page.html
@@ -1,15 +1,27 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tasks"></ion-back-button>
+    </ion-buttons>
     <ion-title>Create Task</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-item>
-    <ion-icon name="paper" slot="start" color="primary"></ion-icon>
-    <ion-input type="text" placeholder="Title" autofocus="true" inputmode="text"> </ion-input>
-  </ion-item>
-  <ion-button expand="full" type="submit">
-    Save
-  </ion-button>
+  <form [formGroup]="taskForm" (submit)="onSubmit()">
+    <ion-item>
+      <ion-icon name="paper" slot="start" color="primary"></ion-icon>
+      <ion-input
+        type="text"
+        placeholder="Title"
+        autofocus="true"
+        inputmode="text"
+        formControlName="title"
+      >
+      </ion-input>
+    </ion-item>
+    <ion-button expand="full" type="submit" [disabled]="taskForm.invalid">
+      Save
+    </ion-button>
+  </form>
 </ion-content>
