--- a/src/app/tasks/components/task-item/task-item.component.html
+++ b/src/app/tasks/components/task-item/task-item.component.html
@@ -10,11 +10,20 @@
     ></ion-toggle>
   </ion-item>
   <ion-item-options side="start">
-    <ion-item-option color="danger" (click)="delete.emit(task); sliding.close()">
-      <ion-icon slot="icon-only" name="trash"></ion-icon>
+    <ion-item-option
+      color="danger"
+      (click)="delete.emit(task); sliding.close()"
+    >
+      <ion-icon
+        slot="icon-only"
+        name="trash"
+      ></ion-icon>
     </ion-item-option>
     <ion-item-option (click)="update.emit(task); sliding.close()">
-      <ion-icon slot="icon-only" name="create"></ion-icon>
+      <ion-icon
+        slot="icon-only"
+        name="create"
+      ></ion-icon>
     </ion-item-option>
   </ion-item-options>
 </ion-item-sliding>
