--- a/src/app/tasks/pages/tasks-list/tasks-list.page.html
+++ b/src/app/tasks/pages/tasks-list/tasks-list.page.html
@@ -7,7 +7,11 @@
 <ion-content padding>
   <ion-list *ngIf="tasks$ | async as tasks">
     <ng-container *ngIf="tasks.length > 0; else noTasks">
-      <app-task-item *ngFor="let task of tasks" [task]="task"></app-task-item>
+      <app-task-item
+        *ngFor="let task of tasks"
+        [task]="task"
+        (update)="onUpdate($event)"
+      ></app-task-item>
     </ng-container>
     <ng-template #noTasks>
       <ion-item lines="none">No Task yet...</ion-item>
