--- a/src/app/tasks/pages/tasks-list/tasks-list.page.html
+++ b/src/app/tasks/pages/tasks-list/tasks-list.page.html
@@ -11,6 +11,7 @@
         *ngFor="let task of tasks"
         [task]="task"
         (update)="onUpdate($event)"
+        (delete)="onDelete($event)"
       ></app-task-item>
     </ng-container>
     <ng-template #noTasks>
