Nome do usuário logado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 
     <ion-content>
       <ion-list>
+        <ion-list-header *ngIf="user">{{ user.displayName }}</ion-list-header>
         <ion-menu-toggle autoHide="false">
           <ion-item
             button
