--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ion-app>
+<ion-split-pane contentId="menu-content" when="md">
   <ion-menu contentId="menu-content" menuId="main-menu" [disabled]="true">
     <ion-header>
       <ion-toolbar color="primary">
@@ -24,4 +24,4 @@
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="menu-content"></ion-router-outlet>
-</ion-app>
+</ion-split-pane>
